Cambios en el archivo description y agrego viñeta

--- a/analisis.clima/DESCRIPTION
+++ b/analisis.clima/DESCRIPTION
@@ -2,10 +2,15 @@ Package: analisis.clima
 Title: Analisis de datos de estaciones meteorlogicas.
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person("Catalina", "Vujovich", , "catavujovich17@gmail.com", role = c("aut", "cre"))
+    person("Victoria", "Barrias Tiberi", , "victoria.nieves.barrias.tiberi@gmail.com", role = c("aut", "cre"))
+Description: Paquete desarrollado para leer, analizar y procesar datos meteorológicos de distintas estaciones.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.0
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
