cambios en el archivo description

--- a/analisis.clima/DESCRIPTION
+++ b/analisis.clima/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: analisis.clima
 Title: Analisis de datos de estaciones meteorlogicas.
 Version: 0.0.0.9000
-Authors@R: 
-    person("Catalina", "Vujovich", , "catavujovich17@gmail.com", role = c("aut", "cre"))
-    person("Victoria", "Barrias Tiberi", , "victoria.nieves.barrias.tiberi@gmail.com", role = "aut")
+Authors@R: c(
+    person(given = "Catalina", family = "Vujovich", email = "catavujovich17@gmail.com", role = c("aut", "cre")),
+    person(given = "Victoria", family = "Barrias Tiberi", email = "victoria.nieves.barrias.tiberi@gmail.com", role = "aut")
+)
 Description: Paquete desarrollado para leer, analizar y procesar datos meteorológicos de distintas estaciones.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
