--- a/analisis.clima/DESCRIPTION
+++ b/analisis.clima/DESCRIPTION
@@ -12,8 +12,14 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.0
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Depends: 
     R (>= 3.5)
 LazyData: true
+Imports:
+    dplyr,
+    ggplot2,
+    lubridate
+Config/testthat/edition: 3
