--- a/analisis.clima/DESCRIPTION
+++ b/analisis.clima/DESCRIPTION
@@ -2,8 +2,10 @@ Package: analisis.clima
 Title: Analisis de datos de estaciones meteorlogicas.
 Version: 0.0.0.9000
 Authors@R: 
-    person("Catalina", "Vujovich", , "catavujovich17@gmail.com", role = c("aut", "cre"))
-    person("Victoria", "Barrias Tiberi", , "victoria.nieves.barrias.tiberi@gmail.com", role = "aut")
+    c(
+      person("Catalina", "Vujovich", email = "catavujovich17@gmail.com", role = c("aut", "cre")),
+      person("Victoria", "Barrias Tiberi", email = "victoria.nieves.barrias.tiberi@gmail.com", role = "aut")
+    )
 Description: Paquete desarrollado para leer, analizar y procesar datos meteorológicos de distintas estaciones.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
@@ -21,7 +23,8 @@ LazyData: true
 Imports:
     dplyr,
     ggplot2,
-    lubridate
+    lubridate,
+    tidyr
 Config/testthat/edition: 3
 URL: https://github.com/catavujovich/Datos-Meteorol-gicos
 BugReports: https://github.com/catavujovich/Datos-Meteorol-gicos/issues
