correcciones en el website y archivo DESCRIPTION

--- a/analisis.clima/_pkgdown.yml
+++ b/analisis.clima/_pkgdown.yml
@@ -1,4 +1,34 @@
-url: https://catavujovich.github.io/Datos-Meteorol-gicos/
+url: https://catavujovich.github.io/analisis.clima/
+
 template:
   bootstrap: 5
+
+navbar:
+  structure:
+    left:
+      - home
+      - reference
+      - articles
+      - authors
+
+  components:
+    home:
+      text: "Inicio"
+      href: index.html
+    reference:
+      text: "Funciones"
+      href: reference/index.html
+    articles:
+      text: "Ejemplos"
+      href: articles/index.html
+    authors:
+      text: "Autores"
+      href: authors.html
+
+home:
+  title: "analisis.clima"
+  description: "Paquete para analizar y visualizar datos meteorológicos."
+  links:
+    - text: "Repositorio en GitHub"
+      href: https://github.com/catavujovich/analisis.clima
 
