--- a/analisis.clima/docs/pkgdown.yml
+++ b/analisis.clima/docs/pkgdown.yml
@@ -3,4 +3,7 @@ pkgdown: 2.2.0
 pkgdown_sha: ~
 articles:
   analisis_clima: analisis_clima.html
-last_built: 2025-11-07T14:39Z
+last_built: 2025-11-07T16:30Z
+urls:
+  reference: https://catavujovich.github.io/analisis.clima/reference
+  article: https://catavujovich.github.io/analisis.clima/articles
