--- a/analisis.clima/DESCRIPTION
+++ b/analisis.clima/DESCRIPTION
@@ -26,6 +26,5 @@ Imports:
     lubridate,
     tidyr
 Config/testthat/edition: 3
-URL: https://github.com/catavujovich/Datos-Meteorol-gicos
+URL: https://github.com/catavujovich/Datos-Meteorol-gicos, https://catavujovich.github.io/Datos-Meteorol-gicos/
 BugReports: https://github.com/catavujovich/Datos-Meteorol-gicos/issues
-
