--- a/analisis.clima/DESCRIPTION
+++ b/analisis.clima/DESCRIPTION
@@ -7,8 +7,7 @@ Authors@R:
       person("Victoria", "Barrias Tiberi", email = "victoria.nieves.barrias.tiberi@gmail.com", role = "aut")
     )
 Description: Paquete desarrollado para leer, analizar y procesar datos meteorológicos de distintas estaciones.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
@@ -28,4 +27,3 @@ Imports:
 Config/testthat/edition: 3
 URL: https://github.com/catavujovich/Datos-Meteorol-gicos
 BugReports: https://github.com/catavujovich/Datos-Meteorol-gicos/issues
-
